--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>김용주 발표자료</title>
+  <title>김용주 data</title>
 </head>
 <body style="font-family: sans-serif; text-align: center; padding-top: 100px;">
-  <h1>📄 발표자료 다운로드</h1>
+  <h1>📄 증명사진 다운로드</h1>
   <p><a href="https://drive.google.com/drive/folders/1yanVyI2pGxu-xTTFAlDkyRUimiZJ7_cI?usp=sharing" target="_blank" style="font-size: 20px; color: blue;">👉 Google Drive에서 열기</a></p>
-  <p>📆 발표일: 2025.06.21<br>👤 발표자: 김용주</p>
 </body>
 </html>
